<resources>
    <!-- COMMON -->
    <string name="app_name">LearningAndroid</string>
    <string name="lorem">Lorem ipsum dolor sit amet, has dicant saperet voluptatibus ad. [it.lipsum.com/] Eu cum libris interesset, duo ne zril tollit malorum, pro ei quas civibus. Disputando dissentiunt ei his. Vim ei exerci deleniti. Cu graeci scripserit vim, iusto deseruisse ei sit.</string>
    <string name="lorem_intro">Lorem ipsum dolor sit amet.</string>
    <string name="drag">drag</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="modify">Modify</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="favorite">Favorite</string>

    <!-- MAIN -->
    <string-array name="main_items">
        <item>jsoup</item>
        <item>Rx</item>
        <item>AsyncTask Loader</item>
        <item>NestedScrollView</item>
        <item>RecyclerView</item>
        <item>PercentLayout with StubView</item>
        <item>CollapsingToolbarLayout with CoordinatorLayout</item>
        <item>Retrofit</item>
        <item>Android Annotations</item>
        <item>Realm</item>
        <item>BaseAdapter with different row</item>
        <item>Reflection</item>
        <item>CustomView</item>
        <item>XML Binding</item>
        <item>ProtocolBuffers - Wire</item>
        <item>ConstraintLayout</item>
        <item>Parcelable with Parceler</item>
        <item>Pub/Sub Design Pattern</item>
        <item>Litho</item>
        <item>Dagger</item>
        <item>SyncAdapter</item>
        <item>Concurrency</item>
        <item>Patterns</item>
        <item>Cloud</item>
    </string-array>

    <!-- JSOUP -->
    <string name="jsoup_actionbar_title">jsoup</string>

    <!-- NESTED SCROLL VIEW -->
    <string name="nestedscroll_actionbar_title">NestedScrollView</string>

    <!-- RECYCLER VIEW -->
    <string name="recyclerview_actionbar_title">RecyclerView</string>

    <!-- ANNOTATION -->
    <string name="annotation_actionbar_title">Annotation</string>
    <string name="annotationfragment_actionbar_title">AnnotationFragment</string>

    <!-- PERCENT -->
    <string name="percent_actionbar_title">PercentLayout</string>

    <!-- COLLAPSING -->
    <string name="collpasing_actionbar_title">CollapsingToolbar and CoordinatorLayout</string>

    <!-- BASEADAPTER DIFFERENT ROW -->
    <string name="differentrow_actionbar_title">BaseAdapter with different row</string>
    <string name="differentrow_btchange_title">Change first 5</string>

    <!-- XML BINDING -->
    <string name="xmlbinding_actionbar_title">XML Binding</string>

    <!-- CONSTRAINT -->
    <string name="constraint_actionbar_title">ConstraintLayout</string>

    <!-- PUB/SUB -->
    <string name="pubsub_actionbar_title">Pub/Sub Design Pattern</string>
    <string name="pubsub_button_title">Invia Message</string>
    <string name="pubsub_button2_title">Invia Message con Object</string>

    <!-- RETROFIT -->
    <string name="retrofit_actionbar_title">Retrofit</string>

    <!-- REALM -->
    <string name="realm_actionbar_title">Realm</string>
    <string name="realm_tvresults">%1$s nel DB</string>
    <plurals name="risultati">
        <item quantity="zero">nessun risultato presente</item>
        <item quantity="one">un risultato presente</item>
        <item quantity="other">%1$d risultati presenti</item>
    </plurals>
    <string name="realm_menuoptions_sortid">Sort by ID</string>
    <string name="realm_menuoptions_searchneeded">Search needed tasks</string>

    <!-- REFLECTION -->
    <string name="reflection_actionbar_title">Reflection</string>

    <!-- LITHO -->
    <string name="litho_actionbar_title">Litho</string>

    <!-- CUSTOMVIEW -->
    <string name="customview_actionbar_title">CustomView</string>

    <!-- RX -->
    <string name="rx_actionbar_title">Rx2</string>
    <string-array name="rx_items">
        <item>Operators by category</item>
    </string-array>
    <string-array name="rx_operators_items">
        <item></item>
        <item>Creating:\nOperators that originate new Observables</item>
        <item>Transforming:\nOperators that transform items that are emitted by an Observable</item>
        <item>Filtering:\nOperators that selectively emit items from a source Observable</item>
        <item>Combining:\nOperators that work with multiple source Observables to create a single Observable</item>
        <item>Error Handling:\nOperators that help to recover from error notifications from an Observable</item>
        <item>Conditional and Boolean:\nOperators that evaluate one or more Observables or items emitted by Observables</item>
        <item>Mathematical and Aggregate:\nOperators that operate on the entire sequence of items emitted by an Observable</item>
        <item>Backpressure</item>
    </string-array>

    <!-- DAGGER -->
    <string name="dagger_actionbar_title">Dagger2</string>

    <!-- SYNCADAPTER -->
    <string name="serversync_actionbar_title">ServerSync (SyncAdapter)</string>

    <!-- CONCURRENCY -->
    <string name="concurrency_actionbar_title">Concurrency (Future)</string>

    <!-- PATTERNS -->
    <string name="patterns_actionbar_title">Patterns</string>
    <string-array name="patterns_items">
        <item>Strategy</item>
        <item>Decorator</item>
        <item>Factory Method</item>
    </string-array>

    <!-- CLOUD -->
    <string name="cloud_actionbar_title">Cloud</string>
    <string-array name="cloud_login_type">
        <item />
        <item>Google</item>
        <item>AWS</item>
        <item>Azure</item>
    </string-array>
</resources>
